# WordleSolver

./: Cargo.toml  README.md
datasets/: common_words.txt  letter_frequency.txt
src/: main.rs
